2010-05-24  Alexander V. Lukyanov <lav@yars.free.net>

	* GetJob.cc: fixed get/mget -c with xfer:clobber=no.

2010-05-20  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: workaround for servers with LANG but without UTF8
	  (original patch by Henry Hu <henry.hu.sh@gmail.com>).

2010-04-30  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopy.cc, FileCopy.h, pgetJob.cc: (do_verify) new flag; unset it
	  for pget chunks.

2010-04-28  Alexander V. Lukyanov <lav@yars.free.net>

	* misc.cc, misc.h: (random_init, random01) new functions.
	* ResMgr.cc: use them.
	* TimeDate.cc, TimeDate.h: (TimeDiff::valueOf) new static method.
	* Timer.cc, Timer.h: (AddRandom) new method for randomization.
	* Torrent.cc: randomize peer connections in time.

2010-04-19  Alexander V. Lukyanov <lav@yars.free.net>

	* GetJob.cc: make xfer:clobber=no by default.
	* FileCopy.cc, FileCopy.h: fixed retries counting on upload;
	  track upload watermark.
	* ftpclass.cc: handle 426 reply on upload specially;
	  retry FEAT after login on any 5xx reply but explicit unsup code.

2010-03-18  Alexander V. Lukyanov <lav@yars.free.net>

	* resource.cc, commands.cc: add setting xfer:auto-rename to control
	  server's suggested file name usage.

2010-03-09  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: prolong y2k workaround for next 300 years.

2010-03-05  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h: (ssl-copy-sid) new setting; added
	  recognition of "too many users" condition in Transient5XX method;
	  more const on methods; shutdown ssl properly after CCC command.
	* resource.cc: (ftp:ssl-copy-sid) new setting; update RETRY_530 list.
	* Torrent.cc, Torrent.h: add black_list; refuse to start the same
	  torrent twice.

2010-02-05  Alexander V. Lukyanov <lav@yars.free.net>

	* FileAccess.cc, FileAccess.h, network.cc, network.h: more const.
	* misc.h: (ListScanPtr) new macro.

2010-01-27  Alexander V. Lukyanov <lav@yars.free.net>
