@@ -1,3 +1,9 @@
+2010-06-02  Alexander V. Lukyanov <lav@yars.free.net>
+
+	* CopyJob.cc: use no_status flag.
+	* CopyJob.h: (NoStatus) accept optional parameter.
+	* OutputJob.cc: pass no_status flag.
+
 2010-05-24  Alexander V. Lukyanov <lav@yars.free.net>
 
 	* GetJob.cc: fixed get/mget -c with xfer:clobber=no.
